# gene-lens

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README.pt-BR.md  RELEASE.md  ROADMAP.md  SECURITY.md  config.py  dashboard.py  docker-compose.yml  download_databases.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  db-canary.yml
sample/: README.md  sample_genome.csv
src/: analyzer.py  ancestry.py  chat_store.py  consent.py  coverage.py  databases.py  family_planning.py  hereditary_conditions.py  i18n.py  local_ai.py  medical_specialties.py  parsers.py  phenotype.py  phenotype_i18n.py  preferences.py  privacy.py  prs.py  reports.py  sex_inference.py  snp_database.py  system_status.py  translations.py  translator.py  wellness_i18n.py  wellness_panels.py
static/css/: tokens.css
static/js/: halfmoon.min.js
templates/: consent.html  dashboard.html  loading.html  loading_translate.html  report.html  settings.html
tests/: conftest.py  test_ai_chat_toggle.py  test_chat_store.py  test_coverage.py  test_dashboard_security.py  test_data_leak.py  test_databases.py  test_hereditary_conditions.py  test_i18n.py  test_local_ai_chat.py  test_medical_specialties.py  test_panels.py  test_parsers.py  test_privacy.py  test_prs.py  test_reports_protocols.py  test_sex_inference.py  test_system_status.py
