[project]
name = "genetic-health-analyzer"
version = "2.0.0"
description = "Privacy-first, local-only exploration of consumer genome files (23andMe, AncestryDNA, etc.)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dimas Mendes" }]
keywords = ["genetics", "bioinformatics", "23andme", "clinvar", "pharmgkb", "privacy", "local-first"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "flask==3.1.3",
    "tqdm==4.67.3",
    "requests==2.34.2",
]

[project.optional-dependencies]
translation = ["argostranslate==1.9.6"]
local-ai = ["ollama==0.3.3"]
dev = ["pytest>=8.0", "flake8>=7.0"]

[project.urls]
Homepage = "https://github.com/dimas-amendes/genetics"
Issues = "https://github.com/dimas-amendes/genetics/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["dashboard", "main", "config", "run", "download_databases"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:flask.*",
    "ignore::DeprecationWarning:werkzeug.*",
]
